# impala

./: .gitignore  CLAUDE.md  CONTEXT.md  PRODUCT.md  README.md  bunfig.toml  index.html  mise.toml  package-lock.json  package.json  turbo.json
.claude/: settings.local.json
.claude/plans/: shiny-doodling-hummingbird.md
.claude/skills/create-release/: SKILL.md
.github/workflows/: build-desktop.yml  release-desktop.yml
.impeccable/live/: config.json
.superpowers/brainstorm/92824-1774276341/: .server-stopped  approaches.html  layout.html
apps/desktop/: DESIGN.md  index.html  package.json  vite.config.ts
apps/desktop/dev/: README.md  dev-browser.html  mock-backend.ts
apps/desktop/scripts/: check-production-bundle.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx  router.tsx  store.ts  types.ts
apps/desktop/src/components/: AnnotationDisplay.tsx  AnnotationsPanel.tsx  BrowserPane.tsx  ChangedFileContextMenu.tsx  CommandPalette.tsx  CommitPanel.tsx  CompanionFilePreview.tsx  CompanionSidebar.tsx  DiffView.tsx  FileFinder.tsx  FileSearchInput.tsx  FileViewer.tsx  FilesPanel.tsx  FloatingTerminal.tsx  GeneralTerminalLeaf.tsx  GhosttyTerminal.tsx  HotkeyDisplay.tsx  InlineAnnotationForm.tsx  MarkdownPreview.tsx  NewWorktreeDialog.tsx  OpenInEditorButton.tsx  PlanAnnotationDisplay.tsx  PlanAnnotationForm.tsx  PlanAnnotationsPanel.tsx  PlanBrowser.tsx  PlanToolbar.tsx  PlanView.tsx  PrBadge.tsx  PrHoverCard.tsx  ResizablePanel.tsx  RevealInFinderButton.tsx  RightSidebar.tsx  RunActionsButton.tsx  RunningServicesMenu.tsx  SettingsView.tsx  Sidebar.tsx  SplitTreeRenderer.tsx  SubagentMenu.tsx  TabPill.tsx  TabbedTerminals.tsx  (+5 more)
apps/desktop/src/hooks/: useAgentNotifications.ts  useAgentStatusSync.ts  useAllFiles.ts  useAnnotationActions.ts  useAppHotkey.ts  useAutomationBadge.ts  useBrowserAgentActivity.ts  useBrowserAnnotations.ts  useBrowserUnderlayBridge.ts  useCmdClickCursor.ts  useDebouncedSetting.ts  useDevServerDetection.ts  useDockBadge.ts  useFileTreeData.ts  useInvoke.ts  useMountEffect.ts  usePlanAnnotationActions.ts  usePlanHighlighter.ts  usePlanNotifications.ts  usePrStatusSync.ts  useProjectActions.ts  useSelectedPlanAnnotation.ts  useSystemFonts.ts  useWorktreeActions.ts
apps/desktop/src/lib/: actions.ts  agent-launch.ts  agent.ts  automation-executor.ts  automation-run-dispatcher.test.mjs  automation-run-dispatcher.ts  automation-templates.ts  automations-project.ts  browser-history.test.js  browser-history.ts  browser-picker.ts  browser-underlay.test.js  browser-underlay.ts  code-context.ts  editor-buffer-registry.ts  encode-pty.ts  file-kind.ts  file-link-parser.ts  (+43 more)
backend/mcp/: Cargo.toml
backend/mcp/src/: main.rs  observability.rs
backend/mcp/tests/: hook_port_discovery.rs
backend/tauri/: Cargo.toml  build.rs  tauri.conf.json
backend/tauri/.cargo/: config.toml
backend/tauri/capabilities/: default.json
backend/tauri/daemon/: Cargo.toml  build.rs
backend/tauri/daemon/src/: main.rs  observability.rs
backend/tauri/icons/: icon.icns
backend/tauri/shared/: Cargo.toml
backend/tauri/shared/src/: lib.rs  paths.rs  shell_ready_scanner.rs  wire.rs
backend/tauri/src/: agent_config.rs  annotations.rs  automations.rs  bitbucket.rs  browser.rs  config.rs  daemon_client.rs  file_io.rs  file_tree.rs  fonts.rs  git.rs  github.rs  hook_server.rs  hotkeys.rs  issue_context.rs  issue_tracker.rs  jira.rs  lib.rs  linear.rs  linear_context.rs  main.rs  notifications.rs  observability.rs  plan_annotations.rs  plan_scanner.rs  plans.rs  pty.rs  running_services.rs  settings.rs  shell_wrappers.rs  subagents.rs  viewed_files.rs  watcher.rs  worktree_issues.rs  worktrees.rs
docs/adr/: 0001-file-open-modifier-key-scheme.md  0002-prosemark-for-fileviewer-markdown.md  0003-actions-replace-run-script.md  0004-actions-share-one-run-pane.md  0005-base-branch-local-not-shared.md  0006-bitbucket-pr-status-via-bkt-cli.md  0007-per-project-issue-tracker.md
docs/dependencies/: updates-2026-07-24.md
docs/features/: persistent-sessions.md
docs/plans/2026-03-24-differ-phase-1/: overview.md  task-1.md  task-2.md  task-3.md
docs/plans/2026-04-09-superset-features/: execution-log.md  overview.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
docs/superpowers/specs/: 2026-03-23-differ-design.md  2026-03-24-claude-cli-integration-design.md  2026-03-24-monorepo-design.md  2026-03-25-chrome-redesign-design.md  2026-03-25-diff-theming-design.md  2026-03-25-settings-themes-design.md  2026-03-25-store-split-design.md  2026-03-31-linear-context-injection-design.md  2026-04-01-delta-since-viewed-design.md  2026-04-01-differ-review-skill-design.md  2026-04-09-superset-features-design.md  2026-04-13-worktree-titles-design.md  2026-05-21-annotations-view-redesign-design.md
patches/: @pierre%2Fdiffs@1.1.7.patch
plans/: browser-trusted-input.md  builtin-browser-phase-1.md  builtin-browser-phase-2.md  builtin-browser-phase-3.md  configurable-claude-flags.md  file-open-modifier-keys.execution-log.md  file-open-modifier-keys.md  open-in-editor.md  plan-browser-feature.md  plan-review-feature.md  scheduled-automations-phase-1.md  scheduled-automations-phase-2.md  splittable-tabs.md
plans/2026-04-29-file-explorer-phase-1/: execution-log.md  overview.md  task-1-rust-list-directory.md  task-2-files-tab-tree.md  task-3-file-viewer-mode.md
plans/2026-04-29-file-explorer-phase-2/: execution-log.md  overview.md  task-1-git-status-and-icons.md  task-2-non-text-handling.md  task-3-persistence.md  task-4-path-level-watcher.md
plans/2026-04-29-file-explorer-phase-3/: execution-log.md  overview.md  task-1-preview-pin-tabs.md  task-2-in-tree-search.md  task-3-cmd-p-file-finder.md  task-4-reveal-and-sync.md
scripts/: build-mcp-sidecar.sh  build-pty-daemon-sidecar.sh  create-release.sh  dev-sign.sh
src/: App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: annotations.rs  git.rs  lib.rs
src/components/: AnnotationDisplay.tsx  AnnotationForm.tsx  CommitPanel.tsx  DiffView.tsx  Sidebar.tsx
(+58 files in other folders)
