[package]
name = "differ"
version = "0.1.0"
description = "A Tauri App for reviewing git worktree changes"
authors = ["you"]
edition = "2021"

[lib]
name = "differ_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
