[package]
name = "impala-mcp"
version = "0.4.2"
edition = "2021"

[[bin]]
name = "impala-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
dirs = "6"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
