[package]
name = "differ"
version = "0.1.0"
description = "A Tauri App for reviewing git worktree changes"
authors = ["you"]
edition = "2021"

[lib]
name = "differ_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
portable-pty = "0.9.0"
base64 = "0.22.1"
lru = "0.16.3"
tauri-plugin-window-state = "2.4.1"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
tauri-plugin-fs = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
