[workspace]
members = ["shared", "daemon"]

[package]
name = "impala"
version = "0.10.6"
description = "A Tauri App for reviewing git worktree changes"
authors = ["you"]
edition = "2021"

[lib]
name = "impala_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
toml = "0.8"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = "0.4.44"
portable-pty = "0.9.0"
base64 = "0.22.1"
lru = "0.16.3"
tauri-plugin-window-state = "2.4.1"
notify = { version = "8.2.0", features = ["macos_fsevent"] }
tauri-plugin-fs = "2"
dirs = "6"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "time", "sync"] }
tiny_http = "0.12"
urlencoding = "2"
tauri-plugin-notification = "2"
impala-daemon-shared = { path = "shared" }
anyhow = "1"
libc = "0.2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing", "logs"] }
tauri-plugin-sentry = "0.5"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"], default-features = false }
objc2-foundation = { version = "0.3", features = ["NSData"], default-features = false }
notify-rust = "4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
