[package]
name = "impala-pty-daemon"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "impala-pty-daemon"
path = "src/main.rs"

[dependencies]
impala-daemon-shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "macros", "time", "sync", "signal"] }
anyhow = "1"
portable-pty = "0.9.0"
base64 = "0.22.1"
vt100 = "0.15"
